data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4099.wast
;; 8. **Test: Operand Stack Underflow with MisPushed Operands**    - Description: Induce an error by mismanaging the operand stack such that an `call_indirect` instruction lacks necessary arguments by deliberately removing or failing to push. Expect this scenario to execute `unreachable`.    - Constraint: Operand stack underflow triggers failure.    - Unreachable Execution: Improper stack management leads to unintended `unreachable` execution.

(assert_invalid
  (module
    (type (func (param i32 i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func $mismanaged-stack
      (drop (i32.const 42))
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "operand stack underflow"
)